--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Wrapper around htmlparser2 providing a more object oriented interface",
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha test/spec --watch --check-leaks",
-    "testRelease": "mocha test/spec --check-leaks",
+    "test-watch": "mocha test/spec --watch --check-leaks",
+    "test": "mocha test/spec --check-leaks",
     "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- test/spec --check-leaks",
     "docs": "jsdoc lib --destination docs --configure .jsdoc.json --readme README.md ",
-    "preversion": "npm run testRelease",
+    "preversion": "npm run test",
     "version": "npm run changelog && git add -A CHANGELOG.md",
     "postversion": "git push && git push --tags",
     "release-major": "npm version major -m \"chore(release): v%s\"",
