--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "test": "mocha test/spec --check-leaks",
     "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- test/spec --check-leaks",
     "docs": "jsdoc lib --destination docs --configure .jsdoc.json --readme README.md ",
-    "preversion": "npm run test && npm run changelog",
-    "version": "git add -A CHANGELOG.md",
+    "preversion": "npm run test && npm run changelog && git add -A CHANGELOG.md",
+    "version": "",
     "postversion": "git push && git push --tags",
     "release-major": "npm version major -m \"chore(release): v%s\"",
     "release-minor": "npm version minor -m \"chore(release): v%s\"",
     "release-patch": "npm version patch -m \"chore(release): v%s\"",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
   },
   "bugs": {
     "url": "https://github.com/stfsy/node-html-light/issues"
