--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test": "mocha test/spec --check-leaks",
     "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- test/spec --check-leaks",
     "docs": "jsdoc lib --destination docs --configure .jsdoc.json --readme README.md ",
-    "preversion": "npm run test && npm run changelog && git add -A CHANGELOG.md",
-    "version": "",
+    "preversion": "npm run test",
+    "version": "npm run changelog && git add -A CHANGELOG.md",
     "postversion": "git push && git push --tags",
     "release-major": "npm version major -m \"chore(release): v%s\"",
     "release-minor": "npm version minor -m \"chore(release): v%s\"",
@@ -25,7 +25,7 @@
     "url": "https://github.com/stfsy/node-html-light"
   },
   "keywords": [
-    "node"
+    "node", "dom", "domutils", "htmlparser2"
   ],
   "author": "Stefan Pfaffel",
   "license": "MIT",
