--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-html-light",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Wrapper around htmlparser2 providing a more object oriented interface",
   "main": "lib/index.js",
   "scripts": {
@@ -25,7 +25,10 @@
     "url": "https://github.com/stfsy/node-html-light"
   },
   "keywords": [
-    "node", "dom", "domutils", "htmlparser2"
+    "node",
+    "dom",
+    "domutils",
+    "htmlparser2"
   ],
   "author": "Stefan Pfaffel",
   "license": "MIT",
