--- a/package.json
+++ b/package.json
@@ -1,47 +1,55 @@
 {
-  "name": "node-html-light",
-  "version": "0.3.0",
-  "description": "Wrapper around htmlparser2 providing a more object oriented interface",
-  "main": "lib/index.js",
-  "scripts": {
-    "test-watch": "mocha test/spec --watch --check-leaks",
-    "test": "mocha test/spec --check-leaks",
-    "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- test/spec --check-leaks",
-    "docs": "jsdoc lib --destination docs --configure .jsdoc.json --readme README.md ",
-    "preversion": "npm run test",
-    "version": "npm run changelog && git add -A CHANGELOG.md",
-    "postversion": "git push && git push --tags",
-    "release-major": "npm version major -m \"chore(release): v%s\"",
-    "release-minor": "npm version minor -m \"chore(release): v%s\"",
-    "release-patch": "npm version patch -m \"chore(release): v%s\"",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
-  },
-  "bugs": {
-    "url": "https://github.com/stfsy/node-html-light/issues"
-  },
-  "homepage": "https://github.com/stfsy/node-html-light#readme",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/stfsy/node-html-light"
-  },
-  "keywords": [
-    "node",
-    "dom",
-    "domutils",
-    "htmlparser2"
-  ],
-  "author": "Stefan Pfaffel",
-  "license": "MIT",
-  "devDependencies": {
-    "chai": "^3.5.0",
-    "chai-spies": "^0.7.1",
-    "conventional-changelog": "^1.1.0",
-    "istanbul": "^0.4.4",
-    "minami": "^1.1.1",
-    "mocha": "^2.5.3"
-  },
-  "dependencies": {
-    "fs-promise": "^0.5.0",
-    "htmlparser2": "^3.9.1"
-  }
+    "name": "node-html-light",
+    "version": "0.3.0",
+    "description": "Wrapper around htmlparser2 providing a more object oriented interface",
+    "main": "lib/index.js",
+    "scripts": {
+        "test-watch": "mocha test/spec --watch --check-leaks",
+        "test": "mocha test/spec --check-leaks",
+        "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- test/spec --check-leaks",
+        "docs": "jsdoc lib --destination docs --configure .jsdoc.json --readme README.md ",
+        "preversion": "npm run test",
+        "version": "npm run changelog && git add -A CHANGELOG.md",
+        "postversion": "git push && git push --tags",
+        "release-major": "npm version major -m \"chore(release): v%s\"",
+        "release-minor": "npm version minor -m \"chore(release): v%s\"",
+        "release-patch": "npm version patch -m \"chore(release): v%s\"",
+        "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
+    },
+    "bugs": {
+        "url": "https://github.com/stfsy/node-html-light/issues"
+    },
+    "homepage": "https://github.com/stfsy/node-html-light#readme",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/stfsy/node-html-light"
+    },
+    "keywords": [
+        "node",
+        "document",
+        "dom",
+        "domutils",
+        "elements",
+        "html",
+        "html parser",
+        "htmlparser2",
+        "parser",
+        "render",
+        "render html",
+        "serverside"
+    ],
+    "author": "Stefan Pfaffel",
+    "license": "MIT",
+    "devDependencies": {
+        "chai": "^3.5.0",
+        "chai-spies": "^0.7.1",
+        "conventional-changelog": "^1.1.0",
+        "istanbul": "^0.4.4",
+        "minami": "^1.1.1",
+        "mocha": "^2.5.3"
+    },
+    "dependencies": {
+        "fs-promise": "^0.5.0",
+        "htmlparser2": "^3.9.1"
+    }
 }
