chore(package.json): add jsdoc package dependency

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "chai-spies": "^0.7.1",
     "conventional-changelog": "^1.1.0",
     "istanbul": "^0.4.4",
+    "jsdoc": "^3.4.1",
     "minami": "^1.1.1",
     "mocha": "^2.5.3",
     "watch": "^0.19.2"
