--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-spies": "^0.7.1",
-    "conventional-changelog": "^1.1.0",
+    "conventional-changelog-cli": "^1.2.0",
     "istanbul": "^0.4.4",
     "jsdoc": "^3.4.1",
     "minami": "^1.1.1",
