--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "test-watch": "watch \"npm run test\" test/spec lib",
     "test": "mocha test/spec --check-leaks",
+    "nlv": "node-license-validator --allow-licenses WTFPL ISC MIT Apache-2.0 --allow-packages  \"domelementtype@1.1.3||1.3.0\" domhandler@2.3.0 domutils@1.5.1 entities@1.1.1 --production --deep",
     "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- test/spec --check-leaks",
     "docs": "jsdoc lib --destination docs --configure .jsdoc.json --readme README.md ",
-    "preversion": "npm run test",
+    "preversion": "npm run nlv && npm run test",
     "version": "npm run changelog && git add -A CHANGELOG.md",
     "postversion": "git push && git push --tags",
     "release-major": "npm version major -m \"chore(release): v%s\"",
@@ -48,6 +49,7 @@
     "jsdoc": "^3.4.1",
     "minami": "^1.1.1",
     "mocha": "^2.5.3",
+    "node-license-validator": "^1.3.0",
     "watch": "^0.19.2"
   },
   "dependencies": {
