--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "docs": "jsdoc lib --destination docs --configure .jsdoc.json --readme README.md ",
     "preversion": "npm run nlv && npm run test",
     "version": "npm run changelog && git add -A CHANGELOG.md",
-    "postversion": "git push origin master --tags",
+    "postversion": "git push origin master && git push origin master --tags",
     "release-major": "npm version major -m \"chore(release): v%s\"",
     "release-minor": "npm version minor -m \"chore(release): v%s\"",
     "release-patch": "npm version patch -m \"chore(release): v%s\"",
