--- a/package.json
+++ b/package.json
@@ -50,10 +50,10 @@
     "minami": "^1.1.1",
     "mocha": "^8.2.1",
     "node-license-validator": "^1.3.0",
+    "nyc": "^15.1.0",
     "watch": "^1.0.2"
   },
   "dependencies": {
-    "htmlparser2": "^5.0.0",
-    "nyc": "^15.1.0"
+    "htmlparser2": "^5.0.0"
   }
 }
