--- a/package.json
+++ b/package.json
@@ -50,10 +50,13 @@
     "conventional-changelog-cli": "^2.1.1",
     "fs-promise": "^2.0.2",
     "jsdoc": "^3.6.7",
+    "merge": "^2.1.1",
     "minami": "^1.1.1",
+    "minimist": "^1.2.5",
     "mocha": "^8.4.0",
     "node-license-validator": "^1.3.0",
     "nyc": "^15.1.0",
+    "trim-newlines": "^4.0.2",
     "watch": "^1.0.2"
   },
   "dependencies": {
